// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GroupsDetailsPanel Renders renders 1`] = `
<GroupsDetailsPanel
  inherited={false}
  item={
    Object {
      "active": true,
      "description": "mockDescription",
      "id": "mockId",
      "name": "mockName",
      "users": Array [
        Object {
          "id": "mockSubEntityId",
        },
      ],
    }
  }
  outboundIdentifierListsFields={
    Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ]
  }
  reasonListsFields={
    Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ]
  }
  removeListItem={[Function]}
  setSelectedSubEntityId={[Function]}
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(observable): [Function],
    }
  }
  storeSubscription={
    Subscription {
      "listeners": Object {
        "clear": [Function],
        "get": [Function],
        "notify": [Function],
        "subscribe": [Function],
      },
      "onStateChange": [Function],
      "parentSub": undefined,
      "store": Object {
        "dispatch": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
        Symbol(observable): [Function],
      },
      "unsubscribe": [Function],
    }
  }
  userHasUpdatePermission={true}
  usersFields={
    Array [
      Object {
        "label": "First Name",
        "name": "firstName",
      },
      Object {
        "label": "Last Name",
        "name": "lastName",
      },
      Object {
        "label": "Email",
        "name": "email",
      },
    ]
  }
  usersItems={
    Array [
      "mockListMembers",
    ]
  }
>
  Child
</GroupsDetailsPanel>
`;

exports[`Maps state to props only using selectors validates object created from mapStateToProps 1`] = `
Object {
  "inherited": false,
  "item": Object {
    "active": true,
    "description": "mockDescription",
    "id": "mockId",
    "name": "mockName",
    "users": Array [
      Object {
        "id": "mockSubEntityId",
      },
    ],
  },
  "outboundIdentifierListsFields": Array [
    Object {
      "label": "Name",
      "name": "name",
    },
    Object {
      "label": "Description",
      "name": "description",
    },
  ],
  "outboundIdentifierListsItems": undefined,
  "reasonListsFields": Array [
    Object {
      "label": "Name",
      "name": "name",
    },
    Object {
      "label": "Description",
      "name": "description",
    },
  ],
  "reasonListsItems": undefined,
  "userHasUpdatePermission": true,
  "usersFields": Array [
    Object {
      "label": "First Name",
      "name": "firstName",
    },
    Object {
      "label": "Last Name",
      "name": "lastName",
    },
    Object {
      "label": "Email",
      "name": "email",
    },
  ],
  "usersItems": Array [
    "mockListMembers",
  ],
}
`;
